2004-09-21 Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* configure.in: Cater for S/390 on Linux

2004-09-21    <vargaz@freemail.hu>

	* configure.in: Link with ole32 on windows.

2004-09-20  Jackson Harper  <jackson@ximian.com>

	* support/map.c/h: Add poll events map functions. Use values
	instead of names for defines.
	
2004-09-17  Martin Baulig  <martin@ximian.com>

	* Makefile.am (mcs-do-compiler-tests): Reverted Raja's latest
	change in this target.

2004-09-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mcs-do-full-build): Pass NO_SIGN_ASSEMBLIES=yes to
	reduce the number of passes.  We will get the assemblies signed in
	the 'populate-runtime-subdir' phase.
	(mcs-do-run-test-profiles): Rename from mcs-do-run-tests.  Use
	'test-profiles' to test all profiles.
	(mcs-do-compiler-tests): Use 'compiler-tests' target in mcs/.
	(bootstrap-check): Update.
	* runtime/Makefile.am ($(monoone_DATA) $(monotwo_DATA) $(monobins_DATA)): 
	Simplify.

2004-09-10  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (populate-runtime-subdir): Avoid -path argument to find
	since it is not supported on solaris.

2004-09-03  Martin Baulig  <martin@ximian.com>

	* Makefile.am (bootstrap-world): New target.

2004-09-02  Martin Baulig  <martin@ximian.com>

	* runtime/net_1_1/Makefile.am (install-data-local): Install
	mscorlib.dll.mdb into $(corlibdir).

	* runtime/net_2_0/Makefile.am: Likewise.

2004-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* scripts/mcs.in: Remove obsolete comment.

2004-08-27  Lluis Sanchez Gual  <lluis@novell.com>

	* data/net_1_1/DefaultWsdlHelpGenerator.aspx: Little fix.
	* data/net_2_0/DefaultWsdlHelpGenerator.aspx: Added information about
	  basic profile compliance.
	* data/net_2_0/machine.config: Use 2.0 assembly versions.

2004-08-26  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mcs-do-run-test): Depend on '$(tmpinst)/bin/mbas'.
	($(tmpinst)/bin/mbas): Create temporary wrapper file, so that the